--- a/src/java/rutas.properties
+++ b/src/java/rutas.properties
@@ -1,3 +1,4 @@
+#Validar posibles cambios en las propiedades dependiendo del ambiente
 #Internos vs nomina actualizada
 RUTA_LOCAL=\u202a\u202aC:\\dell\\portal\\cambios\\InternosCambios_
 RUTA_NOMINA=C:/dell/portal/nomina/InternosActivos_REMEDY_MovimientosPersonal_
